--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,9 @@
 /* Alapvető stílusok */
 body {
    
-    background-image: url("/images/header.jpg");       
+    background-image: url("/images/header.jpg");     
+    background-size: cover;
+    background-position: center;  
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
