--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -120,6 +120,13 @@ p{
     
 }
 
+/* Apróbetűs szöveg */
+.small-text {
+    font-size: 8px;
+    color: #fe0000;
+    text-align: center;
+    margin-top: 5px;
+}
 
 
 /* Pályák táblázata a főoldalon */
@@ -450,4 +457,54 @@ p {
 
 .gallery-grid figure {
     margin: 0;
+}
+/* Árak oldal stílus */
+.prices-container {
+    text-align: center;
+    padding: 50px 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    color: #FFFCFC;
+}
+
+/* Táblázat stílus */
+.prices-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.prices-table th, .prices-table td {
+    border: 2px solid #CF5443;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.prices-table th {
+    background-color: #181515;
+    color: #FFFCFC;
+}
+
+.prices-table tbody tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.prices-table tbody tr:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* Egyedi ajánlat szöveg */
+.group-pricing {
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+.group-pricing a {
+    color: #CF5443;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.group-pricing a:hover {
+    text-decoration: underline;
 }
