--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -642,6 +642,14 @@ p {
     background-color: #A83D30;
 }
 
+.track-name {
+    font-size: 16px;
+    font-weight: bold;
+    color: #f7d765;
+    margin-bottom: 5px;
+}
+
+
 /* Rádiógombok */
 .radio-buttons {
     display: flex;
