--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -402,64 +402,77 @@ footer {
     bottom: 0;
 }
 
-/* Foglalási oldal stílusai */
-.booking-section, .calendar-section, .confirm-booking-section {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #9a9898;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.booking-section h1, .calendar-section h1, .confirm-booking-section h1 {
+/* Foglalási oldal stílusa */
+.booking-section {
     text-align: center;
-    margin-bottom: 30px;
+    padding: 50px 20px;
+    max-width: 400px;
+    margin: 100px auto;
+    background: #222;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.booking-section form, .calendar-section form, .confirm-booking-section form {
+/* Formázás a beviteli mezőkhöz */
+.booking-section form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 15px;
-}
-
-.booking-section label, .calendar-section label, .confirm-booking-section label {
-    font-weight: bold;
-}
-
-.booking-section input, .booking-section select, 
-.calendar-section input, .calendar-section select, 
-.confirm-booking-section input, .confirm-booking-section select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
     width: 100%;
 }
 
-.booking-section button, .calendar-section button, .confirm-booking-section button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
+/* Label stílus */
+.booking-section label {
+    font-weight: bold;
+    color: white;
+    text-align: left;
+    width: 100%;
+}
+
+/* Beviteli mezők */
+.booking-section input,
+.booking-section select {
+    padding: 10px;
+    border-radius: 5px;
     border: none;
-    border-radius: 4px;
+    font-size: 16px;
+    width: 90%;
+    text-align: left;
+}
+
+/* Kisebb gombméret és középre igazítás */
+.booking-section button {
+    background-color: #CF5443;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 5px;
     cursor: pointer;
+    font-size: 14px;
+    border: none;
+    transition: background 0.3s;
+    width: 50%;
 }
 
-.booking-section button:hover, .calendar-section button:hover, .confirm-booking-section button:hover {
-    background-color: #555;
+.booking-section button:hover {
+    background-color: #A83D30;
 }
 
-.calendar-section h3 {
-    margin-top: 20px;
-}
-
-.calendar-section ul {
-    list-style: none;
-    padding: 0;
-}
-
-.calendar-section li {
-    margin-bottom: 10px;
+/* Regisztrációs gomb */
+.booking-register-button {
+    background-color: #666;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 13px;
+    text-decoration: none;
+    border: none;
+    transition: background 0.3s;
+    width: 50%;
+    margin-top: 50%;
+     
+  
 }
 
 .tracks-list {
